@@ -64,6 +64,8 @@
       <file>data/mbeam.svg</file>
       <file>data/beam32.svg</file>
       <file>data/abeam.svg</file>
+      <file>data/fbeam1.svg</file>
+      <file>data/fbeam2.svg</file>
       <file>data/bg1.jpg</file>
       <file>data/flip.svg</file>
       <file>data/cancel.png</file>
